[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recebi"
version = "0.2.0"
description = "Gerenciador de encomendas."
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
authors = [
    {name = "Pedro Quinellato", email = "pedroqdvieira88123@gmail.com"},
    {name = "Ana Carollina", email = "sla@gmail.com"},
    {name = "Lucas", email = "sla2@gmail.com"},
]

dependencies = [
    "blinker==1.9.0",
    "click==8.3.3",
    "colorama==0.4.6",
    "Flask==3.1.3",
    "flask-cors==6.0.2",
    "Flask-JWT-Extended==4.7.4",
    "Flask-SQLAlchemy==3.1.1",
    "greenlet==3.5.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "PyJWT==2.12.1",
    "PyMySQL==1.1.3",
    "python-dotenv==1.2.2",
    "SQLAlchemy==2.0.49",
    "typing_extensions==4.15.0",
    "Werkzeug==3.1.8",
]

[tool.recebi]
display_name = "Recebi"
company = "Recebi"

[project.optional-dependencies]

dev = [
    "ipython",
    "black",
    "flake8",
]

test = [
    "pytest>=8.3",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
namespaces = true
exclude = ["tests*", "docs*"]

[tool.setuptools.package-data]
"*" = ["*.html", "*.css", "*.js", "*.json", "*.png", "*.jpg"]